--- a/index.html
+++ b/index.html
@@ -249,11 +249,11 @@
                 </div>
             </div>
 
-            <div class="mb-3" style="margin-top: 10px; margin-bottom: 10px; padding: 10px;">
+            <div class="row" style="margin-top: 10px; margin-bottom: 10px; padding: 10px;">
                 <div class="btn-icon bg-primary" style="box-sizing: border-box; border-radius: 5px; ">
                     <i class="fa fa-graduation-cap text-white"></i>
                 </div>
-                <div>
+                <div class="col-md-4">
                     <h4>Skilled Instructors</h4>
                     <p>
                         Our instructors are highly qualified and experienced in their
@@ -264,11 +264,11 @@
                     </p>
                 </div>
             </div>
-            <div class="mb-3" style="margin-top: 10px; margin-bottom: 10px; padding: 10px; border-radius: 5px; ">
+            <div class="row" style="margin-top: 10px; margin-bottom: 10px; padding: 10px; border-radius: 5px; ">
                 <div class="btn-icon bg-secondary" style="box-sizing: border-box; border-radius: 5px;">
                     <i class="fa fa-certificate text-white"></i>
                 </div>
-                <div>
+                <div class="col-md-4">
                     <h4>Career Guidance</h4>
                     <p>
                         Education Consult helps students make informed decisions about their
@@ -279,11 +279,11 @@
                     </p>
                 </div>
             </div>
-            <div class="mb-3" style="margin-top: 10px; margin-bottom: 10px; padding: 10px; border-radius: 5px; ">
+            <div class="row" style="margin-top: 10px; margin-bottom: 10px; padding: 10px; border-radius: 5px; ">
                 <div class="btn-icon bg-warning" style="box-sizing: border-box; border-radius: 5px;">
                     <i class="fa fa-book-reader text-white"></i>
                 </div>
-                <div>
+                <div class="col-md-4">
                     <h4>Programs Of Your Choice</h4>
                     <p class="m-0">
                         We offer a wide range of programs to suit the diverse needs and
@@ -554,56 +554,6 @@
                                 <div><a href="#formModal" class="btn btn-sm btn-primary d-none d-lg-inline-block ml-4"
                                         data-bs-toggle="modal">Enroll now
                                     </a></div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Program 3 -->
-                <div class="col-12 col-sm-6 col-md-6 col-lg-4 mb-4">
-                    <div class="custom-media border rounded bg-white shadow-sm p-3">
-                        <a href="#"><img
-                                src="assets/imgs/corporate-employees-review-transactional-info-improve-customer-satisfaction.jpg"
-                                alt="Business Program" class="img-fluid rounded mb-3"></a>
-                        <div class="custom-media-body">
-                            <div class="d-flex justify-content-between pb-2">
-                                <div class="text-primary"><span class="uil uil-book-open"></span> <span>3-Year
-                                        BBA</span></div>
-                                <div class="review"><span class="icon-star text-warning"></span> <span>4.8</span></div>
-                            </div>
-                            <h5 class="font-weight-bold">Business & Management – Guaranteed Entry + Support</h5>
-                            <p>Affordable degrees in Canada & UK with pathway programs and 40% fee reductions. English
-                                support, visa training, and financial planning included.</p>
-                            <div class="border-top d-flex justify-content-between pt-3 mt-3 align-items-center">
-                                <div><span class="price text-success">From $1,500/year</span></div>
-                                <div><a href="#formModal" class="btn btn-sm btn-primary d-none d-lg-inline-block ml-4"
-                                        data-bs-toggle="modal">Enroll now
-                                    </a></div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Program 4 -->
-                <div class="col-12 col-sm-6 col-md-6 col-lg-4 mb-4">
-                    <div class="custom-media border rounded bg-white shadow-sm p-3">
-                        <a href="#"><img src="assets/imgs/people-repairing-computer-chips.jpg" alt="IT Program"
-                                class="img-fluid rounded mb-3"></a>
-                        <div class="custom-media-body">
-                            <div class="d-flex justify-content-between pb-2">
-                                <div class="text-primary"><span class="uil uil-book-open"></span> <span>3-Year
-                                        BSc</span></div>
-                                <div class="review"><span class="icon-star text-warning"></span> <span>4.6</span></div>
-                            </div>
-                            <h5 class="font-weight-bold">IT & Computer Science – 30% Scholarships</h5>
-                            <p>Study in the UK, USA, or Australia with scholarships based on academic performance.
-                                Internship opportunities and career support included.</p>
-                            <div class="border-top d-flex justify-content-between pt-3 mt-3 align-items-center">
-                                <div><span class="price text-success">From $1,200/year</span></div>
-                                <div><a href="#formModal" class="btn btn-sm btn-primary d-none d-lg-inline-block ml-4"
-                                        data-bs-toggle="modal">Enroll now
-                                    </a>
-                                </div>
                             </div>
                         </div>
                     </div>
