--- a/index.html
+++ b/index.html
@@ -186,17 +186,30 @@
                             (No 12 of 2012)</strong>, with a strong passion for education and a mission to connect
                         aspiring students with prestigious international universities and colleges.
                     </p>
-                    <p data-aos="fade-up" data-aos-delay="200">
-                        Our team of experienced advisors is dedicated to providing personalized support, helping you
-                        navigate the complexities of studying abroad. We offer a wide range of services, including
-                        university application assistance, scholarship advisory, and visa support.
-                    </p>
                 </div>
                 <div class="col-lg-6" data-aos="fade-up" data-aos-delay="400">
                     <a href="https://vimeo.com/342333493" data-fancybox class="video-wrap">
                         <span class="play-wrap"><span class="icon-play"></span></span>
                         <img src="assets/imgs/about us 2.jpg" alt="Image" class="img-fluid rounded">
                     </a>
+                </div>
+                <div class="d-flex mb-3" data-aos="fade-up" data-aos-delay="200">
+                    <div class="col-lg-6" data-aos="fade-left">
+                        <div class="ps-lg-4">
+                            <ul class="list-unstyled mt-4">
+                                <li class="mb-2"><i class="bi bi-check2-circle text-success me-2"></i> Strong
+                                    partnerships with top global universities and colleges</li>
+                                <li class="mb-2"><i class="bi bi-check2-circle text-success me-2"></i> Expert advice
+                                    from experienced professionals in international education</li>
+                                <li class="mb-2"><i class="bi bi-check2-circle text-success me-2"></i> Commitment to
+                                    integrity, transparency, and professionalism</li>
+                                <li class="mb-2"><i class="bi bi-check2-circle text-success me-2"></i> Clear and
+                                    up-to-date information for students and families</li>
+                            </ul>
+                            <p class="mt-4">We prioritize our students' goals and challenges, especially those faced
+                                by international applicants.</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -230,27 +243,9 @@
                     </p>
                 </div>
             </div>
-            <div class="d-flex mb-3" data-aos="fade-up" data-aos-delay="200">
-                <div class="col-lg-6" data-aos="fade-left">
-                    <div class="ps-lg-4">
-                        <ul class="list-unstyled mt-4">
-                            <li class="mb-2"><i class="bi bi-check2-circle text-success me-2"></i> Strong
-                                partnerships with top global universities and colleges</li>
-                            <li class="mb-2"><i class="bi bi-check2-circle text-success me-2"></i> Expert advice
-                                from experienced professionals in international education</li>
-                            <li class="mb-2"><i class="bi bi-check2-circle text-success me-2"></i> Commitment to
-                                integrity, transparency, and professionalism</li>
-                            <li class="mb-2"><i class="bi bi-check2-circle text-success me-2"></i> Clear and
-                                up-to-date information for students and families</li>
-                        </ul>
-                        <p class="mt-4">We prioritize our students' goals and challenges, especially those faced
-                            by international applicants.</p>
-                    </div>
-                </div>
-            </div>
 
-            <div class="row" style="margin-top: 10px; margin-bottom: 10px; padding: 10px;">
-                <div class="btn-icon bg-primary" style="box-sizing: border-box; border-radius: 5px; ">
+            <div class="row">
+                <div class="btn-icon" style="box-sizing: border-box; border-radius: 5px; ">
                     <i class="fa fa-graduation-cap text-white"></i>
                 </div>
                 <div class="col-md-4">
@@ -264,7 +259,7 @@
                     </p>
                 </div>
             </div>
-            <div class="row" style="margin-top: 10px; margin-bottom: 10px; padding: 10px; border-radius: 5px; ">
+            <div class="row">
                 <div class="btn-icon bg-secondary" style="box-sizing: border-box; border-radius: 5px;">
                     <i class="fa fa-certificate text-white"></i>
                 </div>
@@ -279,8 +274,8 @@
                     </p>
                 </div>
             </div>
-            <div class="row" style="margin-top: 10px; margin-bottom: 10px; padding: 10px; border-radius: 5px; ">
-                <div class="btn-icon bg-warning" style="box-sizing: border-box; border-radius: 5px;">
+            <div class="row">
+                <div class="btn-icon" style="box-sizing: border-box; border-radius: 5px;">
                     <i class="fa fa-book-reader text-white"></i>
                 </div>
                 <div class="col-md-4">
@@ -294,11 +289,11 @@
                     </p>
                 </div>
             </div>
-            <div class="mb-3" style="margin-top: 10px; margin-bottom: 10px; padding: 10px; border-radius: 5px; ">
-                <div class="btn-icon bg-info" style="box-sizing: border-box; border-radius: 5px;">
+            <div class="row">
+                <div class="btn-icon" style="box-sizing: border-box; border-radius: 5px;">
                     <i class="fa fa-handshake text-white"></i>
                 </div>
-                <div>
+                <div class="col-md-4">
                     <h4>Student Support</h4>
                     <p class="m-0">
                         We provide a supportive and inclusive environment for students to explore their passions,
@@ -313,6 +308,12 @@
         <div class="container">
 
             <div class="row justify-content-between">
+                <div class="col-lg-6" data-aos="fade-up" data-aos-delay="0">
+                    <figure class="img-wrap-2">
+                        <img src="assets/imgs/Application guidance.jpg" alt="Image" class="img-fluid">
+                    </figure>
+
+                </div>
                 <div class="col-lg-4 mb-5 mb-lg-0">
                     <p data-aos="fade-up" data-aos-delay="100">
                         At Mtendere Education Consult, we are committed to guiding and empowering students in their
@@ -321,17 +322,11 @@
                     </p>
 
                     <ul class="ul-check list-unstyled mb-5 primary" data-aos="fade-up" data-aos-delay="200">
-                        <li>🌍 Integrity in service.</li>
-                        <li>📚 Educational excellence</li>
-                        <li>🤝 Personalized support</li>
+                        <li>Integrity in service.</li>
+                        <li>Educational excellence</li>
+                        <li>Personalized support</li>
                         <li>🚀 Empowering communities</li>
                     </ul>
-                </div>
-                <div class="col-lg-6" data-aos="fade-up" data-aos-delay="0">
-                    <figure class="img-wrap-2">
-                        <img src="assets/imgs/Application guidance.jpg" alt="Image" class="img-fluid">
-                    </figure>
-
                 </div>
             </div>
         </div>
