--- a/index.html
+++ b/index.html
@@ -215,40 +215,13 @@
         </div>
     </div>
 
-    <!---- Vision & Commitment----->
-    <div class="vision-commitment-section">
-        <div class="container">
-            <div class="section-header text-center mb-5">
-                <h6 class="text-primary fw-bold">Our Vision & Commitment</h6>
-                <h1 class="display-5"><span class="text-primary">
-                        Our Vision & Commitment</span>
-                </h1>
-                <p class="lead">
-                    To provide the best possible education and opportunities for our students, we strive to:
-                </p>
-            </div>
-            <div class="row">
-                <div class="col-lg-6 mb-5">
-                    <h4 class="text-primary">Vision</h4>
-                    <p>
-                        To create a world where students from all walks of life can achieve their dreams of success and
-                        personal fulfillment.
-                    </p>
-                </div>
-                <div class="col-lg-6">
-                    <h4 class="text-primary">Commitment</h4>
-                    <p>
-                        To provide a safe, supportive, and inclusive environment for students to explore their passions,
-                        pursue their dreams, and build their careers.
-                    </p>
-                </div>
-            </div>
-
-            <div class="row">
+    <div class="col-lg-10 align-items-center">
+        <div>
+            <div class="row text-center">
                 <div class="btn-icon" style="box-sizing: border-box; border-radius: 5px; ">
                     <i class="fa fa-graduation-cap text-white"></i>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-6 col-lg-4 mb-4">
                     <h4>Skilled Instructors</h4>
                     <p>
                         Our instructors are highly qualified and experienced in their
@@ -259,11 +232,11 @@
                     </p>
                 </div>
             </div>
-            <div class="row">
+            <div class="row text-center">
                 <div class="btn-icon bg-secondary" style="box-sizing: border-box; border-radius: 5px;">
                     <i class="fa fa-certificate text-white"></i>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-6 col-lg-4 mb-4">
                     <h4>Career Guidance</h4>
                     <p>
                         Education Consult helps students make informed decisions about their
@@ -274,11 +247,11 @@
                     </p>
                 </div>
             </div>
-            <div class="row">
+            <div class="row text-center">
                 <div class="btn-icon" style="box-sizing: border-box; border-radius: 5px;">
                     <i class="fa fa-book-reader text-white"></i>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-6 col-lg-4 mb-4">
                     <h4>Programs Of Your Choice</h4>
                     <p class="m-0">
                         We offer a wide range of programs to suit the diverse needs and
@@ -289,11 +262,11 @@
                     </p>
                 </div>
             </div>
-            <div class="row">
+            <div class="row text-center">
                 <div class="btn-icon" style="box-sizing: border-box; border-radius: 5px;">
                     <i class="fa fa-handshake text-white"></i>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-6 col-lg-4 mb-4">
                     <h4>Student Support</h4>
                     <p class="m-0">
                         We provide a supportive and inclusive environment for students to explore their passions,
@@ -346,7 +319,7 @@
                 educational goals.</p>
         </div>
         <div class="row">
-            <div class="col-md-4 service-card" data-aos="fade-up" data-aos-delay="100">
+            <div class="col-md-4 service-card">
                 <div class="service-inner">
                     <div class="service-front">
                         <h5>University Application</h5>
