--- a/index.html
+++ b/index.html
@@ -1221,39 +1221,46 @@
         </div>
     </div>
 
-    <div class="col-lg-12">
-        <div class="owl-carousel blog-carousel owl-theme">
-
-            <!-- Blog Post 1 -->
-            <div class="item">
-                <div class="blog-post text-center px-3">
-                    <img src="assets/imgs/blog-1.jpg" alt="Blog Post 1" class="img-fluid rounded shadow">
-                    <h4 class="mt-3"><a href="#">How to Secure Scholarships for International Studies</a></h4>
-                    <p>Learn the best strategies to secure scholarships for your international studies.</p>
-                </div>
+    <div class="blog-section">
+        <div class="container">
+            <div class="section-header text-center mb-5">
+                <h6 class="text-primary fw-bold">Latest Blog</h6>
+                <h1 class="display-5"><span class="text-primary">From Our Blog</span></h1>
+                <p class="lead">Stay up-to-date with our latest news and insights.</p>
             </div>
+            <div class="owl-carousel blog-carousel owl-theme">
 
-            <!-- Blog Post 2 -->
-            <div class="item">
-                <div class="blog-post text-center px-3">
-                    <img src="assets/imgs/Abroad students Malawi flag.jpg" alt="Blog Post 2"
-                        class="img-fluid rounded shadow">
-                    <h4 class="mt-3"><a href="#">Top Universities for International Students</a></h4>
-                    <p>Discover the top universities that welcome international students with open arms.</p>
+                <!-- Blog Post 1 -->
+                <div class="item">
+                    <div class="blog-post text-center px-3">
+                        <img src="assets/imgs/blog-1.jpg" alt="Blog Post 1" class="img-fluid rounded shadow">
+                        <h4 class="mt-3"><a href="#">How to Secure Scholarships for International Studies</a></h4>
+                        <p>Learn the best strategies to secure scholarships for your international studies.</p>
+                    </div>
                 </div>
-            </div>
 
-            <!-- Blog Post 3 -->
-            <div class="item">
-                <div class="blog-post text-center px-3">
-                    <img src="assets/imgs/doctors pose.jpg" alt="Blog Post 3" class="img-fluid rounded shadow">
-                    <h4 class="mt-3"><a href="#">Tips for Successful University Applications</a></h4>
-                    <p>Get tips and tricks for making your university application stand out.</p>
+                <!-- Blog Post 2 -->
+                <div class="item">
+                    <div class="blog-post text-center px-3">
+                        <img src="assets/imgs/Abroad students Malawi flag.jpg" alt="Blog Post 2"
+                            class="img-fluid rounded shadow">
+                        <h4 class="mt-3"><a href="#">Top Universities for International Students</a></h4>
+                        <p>Discover the top universities that welcome international students with open arms.</p>
+                    </div>
                 </div>
+
+                <!-- Blog Post 3 -->
+                <div class="item">
+                    <div class="blog-post text-center px-3">
+                        <img src="assets/imgs/doctors pose.jpg" alt="Blog Post 3" class="img-fluid rounded shadow">
+                        <h4 class="mt-3"><a href="#">Tips for Successful University Applications</a></h4>
+                        <p>Get tips and tricks for making your university application stand out.</p>
+                    </div>
+                </div>
+
+                <!-- Add more if needed -->
+
             </div>
-
-            <!-- Add more if needed -->
-
         </div>
     </div>
 
@@ -1268,6 +1275,12 @@
     <!-- UNIVERSITY STATS & ACCREDITATIONS -->
     <section id="stats-accreditations" class="py-5 bg-white border-top">
         <div class="container">
+            <div class="section-header text-center mb-5">
+                <h6 class="text-primary fw-bold">University Statistics & Accreditations</h6>
+                <h1 class="display-5"><span class="text-primary">What Makes Mtendere Unique</span></h1>
+                <p class="lead">Learn more about our university statistics and accreditations.</p>
+            </div>
+            
             <!-- STATS -->
             <div class="row text-center mb-5">
                 <div class="col-md-6 col-lg-4 mb-4">
@@ -1322,9 +1335,6 @@
         <div class="container mt-5 pt-5">
             <div class="row">
                 <div class="col-md-6 mb-5">
-                    <a href="index.html" class="navbar-brand">
-                        <a class="navbar-brand" href="#" image src="img/Mtendere_logo.png"></a>
-                    </a>
                     <p class="m-0">
                         Mtendere Education Consult is a leading online education company dedicated to providing
                         high-quality education to its clients. Our mission is to help students achieve their dreams and
