--- a/index.html
+++ b/index.html
@@ -467,140 +467,109 @@
     </div>
 
     <!-- Courses Start -->
-    <div class="container-fluid px-0 py-5">
-        <div class="row mx-0 justify-content-center pt-5">
-            <div class="section-header text-center mb-5">
-                <h6 class="text-primary fw-bold">Popular Scholarship</h6>
-                <h1 class="display-5"><span class="text-primary">
-                        Our Top Scholarships
-                    </span>
-                </h1>
-                <p class="lead">
-                    Discover the best scholarships available for students across India.
-                </p>
-            </div>
+    <div class="container-fluid px-0 py-5 bg-light">
+        <div class="text-center mb-5">
+            <h6 class="text-primary fw-bold">Popular Scholarship</h6>
+            <h1 class="display-5">
+                <span class="text-primary">Our Top Scholarships</span>
+            </h1>
+            <p class="lead">Discover the best scholarships available for students across India.</p>
         </div>
-        <div class="owl-carousel courses-carousel">
-            <div class="courses-item position-relative">
-                <!-- Program 1 -->
-                <div class="col-12 col-sm-6 col-md-6 col-lg-4 mb-4">
-                    <div class="custom-media border rounded shadow-sm p-3">
-                        <a href="#"><img src="assets/imgs/medium-shot-doctor-with-gloves.jpg" alt="Medical Program"
-                                class="img-fluid rounded mb-3"></a>
+
+        <div class="container">
+            <div class="owl-carousel owl-theme courses-carousel">
+                
+                <!-- Course Item 1 -->
+                <div class="item">
+                    <div class="custom-media border rounded shadow-sm p-3 bg-white">
+                        <a href="#"><img src="assets/imgs/medium-shot-doctor-with-gloves.jpg" alt="Medical Program" class="img-fluid rounded mb-3"></a>
                         <div class="custom-media-body">
                             <div class="d-flex justify-content-between pb-2">
-                                <div class="text-primary"><span class="uil uil-book-open"></span> <span>5-Year
-                                        MBBS</span></div>
-                                <div class="review"><span class="icon-star text-warning"></span> <span>4.9</span></div>
+                                <div class="text-primary"><i class="uil uil-book-open"></i> 5-Year MBBS</div>
+                                <div class="review"><i class="icon-star text-warning"></i> 4.9</div>
                             </div>
-                            <h5 class="font-weight-bold">MBBS – Full & Partial Scholarships</h5>
-                            <p>Study Medicine in India, Russia, or Turkey. Scholarships cover up to 70% of tuition.
-                                Partnered with top medical universities with global licensure support.</p>
-                            <div class="border-top d-flex justify-content-between pt-3 mt-3 align-items-center">
-                                <div><span class="price text-success">From $1,200/year</span></div>
-                                <div><a href="#formModal" class="btn btn-sm btn-primary d-none d-lg-inline-block ml-4"
-                                        data-bs-toggle="modal">Enroll now
-                                    </a></div>
+                            <h5 class="fw-bold">MBBS – Full & Partial Scholarships</h5>
+                            <p>Study Medicine in India, Russia, or Turkey. Scholarships cover up to 70% of tuition.</p>
+                            <div class="d-flex justify-content-between align-items-center border-top pt-3 mt-3">
+                                <span class="text-success">From $1,200/year</span>
+                                <a href="#formModal" class="btn btn-sm btn-primary" data-bs-toggle="modal">Enroll now</a>
                             </div>
                         </div>
                     </div>
                 </div>
 
-            </div>
-            <div class="courses-item position-relative">
-                <!-- Program 2 -->
-                <div class="col-12 col-sm-6 col-md-6 col-lg-4 mb-4">
-                    <div class="custom-media border rounded shadow-sm p-3">
-                        <a href="#"><img src="assets/imgs/businessman-with-chart.jpg" alt="Engineering Program"
-                                class="img-fluid rounded mb-3"></a>
+                <!-- Course Item 2 -->
+                <div class="item">
+                    <div class="custom-media border rounded shadow-sm p-3 bg-white">
+                        <a href="#"><img src="assets/imgs/businessman-with-chart.jpg" alt="Engineering Program" class="img-fluid rounded mb-3"></a>
                         <div class="custom-media-body">
                             <div class="d-flex justify-content-between pb-2">
-                                <div class="text-primary"><span class="uil uil-book-open"></span> <span>4-Year
-                                        BEng</span></div>
-                                <div class="review"><span class="icon-star text-warning"></span> <span>4.7</span></div>
+                                <div class="text-primary"><i class="uil uil-book-open"></i> 4-Year BEng</div>
+                                <div class="review"><i class="icon-star text-warning"></i> 4.7</div>
                             </div>
-                            <h5 class="font-weight-bold">Engineering Degrees – 50% Merit Scholarships</h5>
-                            <p>Join tech-focused campuses in Malaysia, UAE, or Poland. Scholarships based on academic
-                                excellence & motivation letters. Strong internship support.</p>
-                            <div class="border-top d-flex justify-content-between pt-3 mt-3 align-items-center">
-                                <div><span class="price text-success">From $980/year</span></div>
-                                <div><a href="#formModal" class="btn btn-sm btn-primary d-none d-lg-inline-block ml-4"
-                                        data-bs-toggle="modal">Enroll now
-                                    </a></div>
+                            <h5 class="fw-bold">Engineering – 50% Merit Scholarships</h5>
+                            <p>Tech-focused campuses in Malaysia, UAE, or Poland. Strong internship support included.</p>
+                            <div class="d-flex justify-content-between align-items-center border-top pt-3 mt-3">
+                                <span class="text-success">From $980/year</span>
+                                <a href="#formModal" class="btn btn-sm btn-primary" data-bs-toggle="modal">Enroll now</a>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="courses-item position-relative">
-                <!-- Program 3 -->
-                <div class="col-12 col-sm-6 col-md-6 col-lg-4 mb-4">
-                    <div class="custom-media border rounded shadow-sm p-3">
-                        <a href="#"><img src="assets/imgs/man-holding-green-book.jpg" alt="Arts Program"
-                                class="img-fluid rounded mb-3"></a>
+
+                <!-- Course Item 3 -->
+                <div class="item">
+                    <div class="custom-media border rounded shadow-sm p-3 bg-white">
+                        <a href="#"><img src="assets/imgs/man-holding-green-book.jpg" alt="Arts Program" class="img-fluid rounded mb-3"></a>
                         <div class="custom-media-body">
                             <div class="d-flex justify-content-between pb-2">
-                                <div class="text-primary"><span class="uil uil-book-open"></span> <span>3-Year
-                                        BA</span></div>
-                                <div class="review"><span class="icon-star text-warning"></span> <span>4.5</span></div>
+                                <div class="text-primary"><i class="uil uil-book-open"></i> 3-Year BA</div>
+                                <div class="review"><i class="icon-star text-warning"></i> 4.5</div>
                             </div>
-                            <h5 class="font-weight-bold">Bachelor of Arts – 50% Merit Scholarships</h5>
-                            <p>Stay ahead of the curve in the arts world by joining top universities in Malaysia, UAE, or Poland. Scholarships based on academic excellence & motivation letters.</p>
+                            <h5 class="fw-bold">Arts – 50% Merit Scholarships</h5>
+                            <p>Join top universities in Malaysia, UAE, or Poland. Scholarships based on academic excellence.</p>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="courses-item position-relative">
-                <!-- Program 4 -->
-                <div class="col-12 col-sm-6 col-md-6 col-lg-4 mb-4">
-                    <div class="custom-media border rounded bg-white shadow-sm p-3">
-                        <a href="#"><img src="assets/imgs/people-repairing-computer-chips.jpg" alt="IT Program"
-                                class="img-fluid rounded mb-3"></a>
+
+                <!-- Course Item 4 -->
+                <div class="item">
+                    <div class="custom-media border rounded shadow-sm p-3 bg-white">
+                        <a href="#"><img src="assets/imgs/people-repairing-computer-chips.jpg" alt="IT Program" class="img-fluid rounded mb-3"></a>
                         <div class="custom-media-body">
                             <div class="d-flex justify-content-between pb-2">
-                                <div class="text-primary"><span class="uil uil-book-open"></span> <span>3-Year
-                                        BSc</span></div>
-                                <div class="review"><span class="icon-star text-warning"></span> <span>4.6</span></div>
+                                <div class="text-primary"><i class="uil uil-book-open"></i> 3-Year BSc</div>
+                                <div class="review"><i class="icon-star text-warning"></i> 4.6</div>
                             </div>
-                            <h4 class="font-weight-bold">IT & Computer Science – 30% Scholarships</h4>
-                            <p>Study in the UK, USA, or Australia with scholarships based on academic performance.
-                                Internship opportunities and career support included.</p>
-                            <div class="border-top d-flex justify-content-between pt-3 mt-3 align-items-center">
-                                <div><span class="price text-success">From $1,200/year</span></div>
-                                <div><a href="#formModal" class="btn btn-sm btn-primary d-none d-lg-inline-block ml-4"
-                                        data-bs-toggle="modal">Enroll now
-                                    </a>
-                                </div>
+                            <h5 class="fw-bold">IT & Computer Science – 30% Scholarships</h5>
+                            <p>Study in UK, USA, or Australia. Internship and career support included.</p>
+                            <div class="d-flex justify-content-between align-items-center border-top pt-3 mt-3">
+                                <span class="text-success">From $1,200/year</span>
+                                <a href="#formModal" class="btn btn-sm btn-primary" data-bs-toggle="modal">Enroll now</a>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="courses-item position-relative">
-                <!---- Program 5---->
-                <div class="col-12 col-sm-6 col-md-6 col-lg-4 mb-4">
-                    <div class="custom-media border rounded bg-white shadow-sm p-3">
-                        <a href="#"><img
-                                src="assets/imgs/corporate-employees-review-transactional-info-improve-customer-satisfaction.jpg"
-                                alt="Business Program" class="img-fluid rounded mb-3"></a>
+
+                <!-- Course Item 5 -->
+                <div class="item">
+                    <div class="custom-media border rounded shadow-sm p-3 bg-white">
+                        <a href="#"><img src="assets/imgs/corporate-employees-review-transactional-info-improve-customer-satisfaction.jpg" alt="Business Program" class="img-fluid rounded mb-3"></a>
                         <div class="custom-media-body">
                             <div class="d-flex justify-content-between pb-2">
-                                <div class="text-primary"><span class="uil uil-book-open"></span> <span>3-Year
-                                        BBA</span></div>
-                                <div class="review"><span class="icon-star text-warning"></span> <span>4.8</span></div>
+                                <div class="text-primary"><i class="uil uil-book-open"></i> 3-Year BBA</div>
+                                <div class="review"><i class="icon-star text-warning"></i> 4.8</div>
                             </div>
-                            <h4 class="font-weight-bold">Business & Management – Guaranteed Entry + Support</h4>
-                            <p>Affordable degrees in Canada & UK with pathway programs and 40% fee reductions. English
-                                support, visa training, and financial planning included.</p>
-                            <div class="border-top d-flex justify-content-between pt-3 mt-3 align-items-center">
-                                <div><span class="price text-success">From $1,500/year</span></div>
-                                <div><a href="#formModal" class="btn btn-sm btn-primary d-none d-lg-inline-block ml-4"
-                                        data-bs-toggle="modal">Enroll now
-                                    </a></div>
+                            <h5 class="fw-bold">Business & Management – Guaranteed Entry</h5>
+                            <p>Affordable degrees in Canada & UK with pathway support. 40% fee reductions available.</p>
+                            <div class="d-flex justify-content-between align-items-center border-top pt-3 mt-3">
+                                <span class="text-success">From $1,500/year</span>
+                                <a href="#formModal" class="btn btn-sm btn-primary" data-bs-toggle="modal">Enroll now</a>
                             </div>
                         </div>
                     </div>
                 </div>
+
             </div>
         </div>
     </div>
