--- a/index.html
+++ b/index.html
@@ -239,7 +239,6 @@
         </div>
     </div>
 
-
     <div class="container mt-5">
         <div class="section-header text-center mb-5">
             <h6 class="text-primary fw-bold">What We Do?</h6>
@@ -388,13 +387,10 @@
                         </div>
                     </a>
                 </div>
-
-
             </div>
-
             <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="400">
                 <div class="col-lg-8 text-center">
-                    <p>We have more category here. <a href="#untree_co-section">Browse all</a></p>
+                    <p>We have more category here. <a href="#">Browse all</a></p>
                 </div>
             </div>
         </div>
