--- a/index.html
+++ b/index.html
@@ -8,24 +8,24 @@
         <meta name="keywords" content="Mtendere Education Consult, study abroad, scholarships, international education">
         <meta name="author" content="Mtendere Education Consult">
 
-        <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
+        <!---<link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
         <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" rel="stylesheet">
         <link href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css" rel="stylesheet">
-
+            --->
         <link rel="stylesheet" href="assets/css/style.css">
 
         <!--- Unicons --->
         <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
 
-        <!--- Bootstrap 5.3 CSS --->
+        <!--- Bootstrap 5.3 CSS
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
 
-        <!-- Owl Carousel CSS --->
+        Owl Carousel CSS 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
-    
+            --->
         <!--- Font Awesome for icons --->
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
     </head>
@@ -1452,14 +1452,13 @@
         <button id="backToTop" title="Back to top">↑</button>
 
         <script src="assets/js/custom.js"></script>
-        <!-- Copy similar modal structures for Janet, Trust, Edna, Ian, Mirabel, Lexina -->
 
         <!-- AOS Script -->
         <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
-        <!-- Scripts --->
-        <!---<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>---->
+        <!-- Scripts -->
+        <!---<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-        <!---<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>---->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>---->
     </body>
 </html>
