--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         <!--- Unicons --->
         <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
 
-        <!--- Bootstrap 5.3 CSS
+        <!--- Bootstrap 5.3 CSS --->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
 
-        Owl Carousel CSS 
+        <!---Owl Carousel CSS 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
             --->
@@ -1456,7 +1456,8 @@
 
         <!-- Scripts -->
         <!---<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+            
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>--->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>---->
     </body>
 </html>
