--- a/index.html
+++ b/index.html
@@ -23,13 +23,18 @@
         <!--- Bootstrap 5.3 CSS --->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
 
-        <!---Owl Carousel CSS ---> 
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
-        
-        <!---
+        <!-- jQuery -->
+        <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+
+        <!-- Owl Carousel CSS -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"/>
+
+        <!-- Owl Carousel JS -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
-        --->
-        
+
         <!--- Font Awesome for icons --->
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
     </head>
@@ -79,8 +84,8 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarContent">
                 <ul class="navbar-nav">
                     <li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="service.html">Services</a></li>
+                    <li class="nav-item"><a class="nav-link" href="course.html">Scholarships/a></li>
                     <li class="nav-item"><a class="nav-link" href="gallery.html">Gallery</a></li>
                     <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
                     <li class="nav-item"><a class="nav-link" href="team.html">Team</a></li>
@@ -1355,7 +1360,7 @@
                         </p>
                         <p><i class="fa fa-phone-alt mr-2"></i> +265999360325 | 0887209531</p>
                         <p><i class="fa fa-envelope mr-2"></i> mtendereeduconsult@gmail.com</p>
-                        <div class="d-flex justify-content-start mt-4">
+                        <div class="d-flex justify-content-start col-lg-3 mb-4">
                             <a class="text-white mr-4" href="https://x.com/MtendereConsult"><i
                                     class="fab fa-2x fa-twitter"></i></a>
                             <a class="text-white mr-4" href="https://web.facebook.com/profile.php?id=61552257338090"><i
