--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <ul class="navbar-nav">
                     <li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="service.html">Services</a></li>
-                    <li class="nav-item"><a class="nav-link" href="course.html">Scholarships/a></li>
+                    <li class="nav-item"><a class="nav-link" href="course.html">Scholarships</a></li>
                     <li class="nav-item"><a class="nav-link" href="gallery.html">Gallery</a></li>
                     <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
                     <li class="nav-item"><a class="nav-link" href="team.html">Team</a></li>
