--- a/index.html
+++ b/index.html
@@ -630,7 +630,7 @@
                 <div id="successStoriesCarousel" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <!-- Student 1 -->
-                        <div class="carousel-item active">
+                        <div class="carousel-item">
                             <div class="student-card text-center">
                                 <img src="assets/imgs/students/Carloline.jpg" class="img-fluid mb-3" alt="Caroline Tembo">
                                 <h3 class="student-name">Caroline Tembo</h3>
@@ -641,7 +641,7 @@
                         </div>
 
                         <!-- Student 2 -->
-                        <div class="carousel-item">
+                        <div class="carousel-item active">
                             <div class="student-card text-center">
                                 <img src="assets/imgs/students/Janet Kandulu.jpg" class="img-fluid mb-3"
                                     alt="Janet Kandulu">
@@ -1153,13 +1153,13 @@
                     <h1 class="display-5"><span class="text-primary">What Our Students Say?</span></h1>
                     <p class="lead">Our students have come to rely on us for their international education needs.</p>
                 </div>
-                <div class="row justify-content-center">
+                <div class="row carousel-slide justify-content-center">
                     <div class="col-lg-10">
                         <!-- Owl Carousel Container -->
-                        <div class="owl-carousel testimonial-carousel">
+                        <div class="inner-Carousel testimonial-carousel">
 
                             <!-- Testimonial 1 -->
-                            <div class="item">
+                            <div class="carousel-item">
                                 <blockquote class="block-testimonial text-center">
                                     <p class="text-lg font-medium text-gray-600">
                                         &ldquo;Mtendere Education Consult’s personalized approach made all the
@@ -1220,10 +1220,10 @@
                     <h1 class="display-5"><span class="text-primary">From Our Blog</span></h1>
                     <p class="lead">Stay up-to-date with our latest news and insights.</p>
                 </div>
-                <div class="owl-carousel blog-carousel owl-theme">
+                <div class="carousel-inner blog-carousel owl-theme">
 
                     <!-- Blog Post 1 -->
-                    <div class="item">
+                    <div class="carousel-item">
                         <div class="blog-post text-center px-3">
                             <img src="assets/imgs/blog-1.jpg" alt="Blog Post 1" class="img-fluid rounded shadow">
                             <h4 class="mt-3"><a href="#">How to Secure Scholarships for International Studies</a></h4>
@@ -1232,7 +1232,7 @@
                     </div>
 
                     <!-- Blog Post 2 -->
-                    <div class="item">
+                    <div class="carousel-inner">
                         <div class="blog-post text-center px-3">
                             <img src="assets/imgs/Abroad students Malawi flag.jpg" alt="Blog Post 2"
                                 class="img-fluid rounded shadow">
@@ -1242,7 +1242,7 @@
                     </div>
 
                     <!-- Blog Post 3 -->
-                    <div class="item">
+                    <div class="carousel-item">
                         <div class="blog-post text-center px-3">
                             <img src="assets/imgs/doctors pose.jpg" alt="Blog Post 3" class="img-fluid rounded shadow">
                             <h4 class="mt-3"><a href="#">Tips for Successful University Applications</a></h4>
@@ -1250,6 +1250,21 @@
                         </div>
                     </div>
 
+                    <!-- Add more if needed -->
+                    <div class="carousel-item">
+                        <div class="blog-post text-center px-3">
+                            <img src="assets/imgs/graduation.jpg" alt="Blog Post 4" class="img-fluid rounded shadow">
+                            <h4 class="mt-3"><a href="#">Tips for International Students' Academic Success</a></h4>
+                            <p>Discover the best strategies for improving your international student's academic performance.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="blog-post text-center px-3">
+                            <img src="assets/imgs/graduation-cap.jpg" alt="Blog Post 5" class="img-fluid rounded shadow">
+                            <h4 class="mt-3"><a href="#">International Student Success Stories</a></h4>
+                            <p>Share your experiences and tips with other international students.</p>
+                        </div>
+                    </div>
                     <!-- Add more if needed -->
 
                 </div>
