--- a/index.html
+++ b/index.html
@@ -1051,7 +1051,6 @@
                         <option value="phd-law">PhD in Law</option>
                         <option value="phd-medicine">PhD in Medicine</option>
                         <option value="phd-architecture">PhD in Architecture</option>
-
                     </select>
 
                     <label for="documents">Required Documents</label>
@@ -1334,6 +1333,7 @@
                     </div>
 
                 </div>
+            </div>
         </section>
 
         <!-- Footer Start -->
@@ -1471,7 +1471,6 @@
 
         <script src="assets/js/custom.js"></script>
 
-        <!-- Scripts -->
         <script src="assets/js/jquery-3.4.1.min.js"></script>
         <script src="assets/js/popper.min.js"></script>
         <script src="assets/js/bootstrap.min.js"></script>
@@ -1493,6 +1492,9 @@
 
         <!-- SwiperJS Script -->
         <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
+
+        <!-- AOS Script -->
+        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
     </body>
 </html>
