--- a/index.html
+++ b/index.html
@@ -596,22 +596,14 @@
                                                 <p>
                                                     International students often face unique challenges when studying
                                                     abroad, including cultural differences, language barriers, and
-                                                    homesickness.</p>
-                                                <p>We provide comprehensive support to help students navigate these
-                                                    challenges and ensure a smooth transition to their new environment.</p>
-                                                <p>We also work closely with universities and colleges to ensure that our
-                                                    students have access to the resources and support they need to succeed.
+                                                    homesickness.
                                                 </p>
                                             </div>
                                         </div>
-
                                     </div>
                                 </div>
-
                             </div> <!-- .accordion-item -->
-
                         </div>
-
                     </div>
                 </div>
             </div>
@@ -1202,9 +1194,7 @@
                                     </div>
                                 </blockquote>
                             </div>
-
                             <!-- Add more testimonials as needed -->
-
                         </div>
                         <!-- End Owl Carousel -->
                     </div>
@@ -1339,15 +1329,15 @@
         <!-- Footer Start -->
         <div class="container-fluid position-relative overlay-top bg-dark text-white-50 py-5">
             <div class="container mt-5 pt-5">
+                <div class="col-md-6 mb-5">
+                    <p class="m-0">
+                        Mtendere Education Consult is a leading online education company dedicated to providing
+                        high-quality education to its clients. Our mission is to help students achieve their dreams and
+                        achieve their academic goals, while also providing them with the tools and support they need to
+                        succeed.
+                    </p>
+                </div>
                 <div class="row">
-                    <div class="col-md-6 mb-5">
-                        <p class="m-0">
-                            Mtendere Education Consult is a leading online education company dedicated to providing
-                            high-quality education to its clients. Our mission is to help students achieve their dreams and
-                            achieve their academic goals, while also providing them with the tools and support they need to
-                            succeed.
-                        </p>
-                    </div>
                     <div class="col-md-6 mb-5">
                         <h3 class="text-white mb-4">Newsletter</h3>
                         <div class="w-100">
@@ -1463,7 +1453,7 @@
         <!-- Floating WhatsApp Chat Button -->
         <a href="https://wa.me/999360325" class="whatsapp-float" target="_blank"
             style="@keyframes bounce {0%, 100% {transform: translateY(0);}50% {transform: translateY(-10px);}}">
-            <img src="https://img.icons8.com/ios-filled/50/ffffff/whatsapp--v1.png" />
+            <img src="https://img.icons8.com/ios-filled/50/ffffff/whatsapp--v1.png">
         </a>
 
         <!-- Back to Top Button -->
