--- a/index.html
+++ b/index.html
@@ -934,28 +934,71 @@
         </div>
 
         <!-- TEAM SECTION -->
-        <div class="container-fluid py-5">
+        <section id="team-section" class="success py-5">
             <div class="container py-5">
-                <div class="text-center mb-5">
-                    <h6 class="text-secondary text-uppercase">Instructors</h6>
-                    <h1 class="display-4">Meet Our Instructors</h1>
+                <div class="section-header text-center mb-5">
+                    <h6 class="text-primary fw-bold">Our Team</h6>
+                    <h1 class="display-5"><span class="text-primary">Inspiring Journeys of Our Students</span></h1>
+                    <p class="lead">Transforming Lives Through Education</p>
                 </div>
-                <div class="owl-carousel team-carousel position-relative" style="padding: 0 30px;">
-                    <div class="team-item">
-                        <img class="img-fluid w-100" src="assets/imgs/team/Brend tawina.jpg" alt="">
-                        <div class="bg-light text-center p-4">
-                            <h5 class="mb-3">Brenda Tawina</h5>
-                            <p class="mb-2"></p>
-                            <div class="d-flex justify-content-center">
-                                <a class="mx-1 p-1" href="#"><i class="fab fa-twitter"></i></a>
-                                <a class="mx-1 p-1" href="#"><i class="fab fa-facebook-f"></i></a>
-                                <a class="mx-1 p-1" href="#"><i class="fab fa-linkedin-in"></i></a>
-                                <a class="mx-1 p-1" href="#"><i class="fab fa-instagram"></i></a>
-                                <a class="mx-1 p-1" href="#"><i class="fab fa-youtube"></i></a>
+
+                <div id="teamCarousel" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        <!-- Student 1 -->
+                        <div class="carousel-item">
+                            <div class="team-item">
+                                <img class="img-fluid w-100" src="assets/imgs/team/Brend tawina.jpg" alt="">
+                                <div class="bg-light text-center p-4">
+                                    <h5 class="mb-3">Brenda Tawina</h5>
+                                    <p class="mb-2"></p>
+                                    <div class="d-flex justify-content-center">
+                                        <a class="mx-1 p-1" href="#"><i class="fab fa-twitter"></i></a>
+                                        <a class="mx-1 p-1" href="#"><i class="fab fa-facebook-f"></i></a>
+                                        <a class="mx-1 p-1" href="#"><i class="fab fa-linkedin-in"></i></a>
+                                        <a class="mx-1 p-1" href="#"><i class="fab fa-instagram"></i></a>
+                                        <a class="mx-1 p-1" href="#"><i class="fab fa-youtube"></i></a>
+                                    </div>
+                                </div>
                             </div>
+                            <!-- Add more team items similarly -->
+                        </div>
+                        <!-- Student 1 -->
+                        <div class="carousel-item">
+                            <div class="team-item">
+                                <img class="img-fluid w-100" src="assets/imgs/team/Brend tawina.jpg" alt="">
+                                <div class="bg-light text-center p-4">
+                                    <h5 class="mb-3">Brenda Tawina</h5>
+                                    <p class="mb-2"></p>
+                                    <div class="d-flex justify-content-center">
+                                        <a class="mx-1 p-1" href="#"><i class="fab fa-twitter"></i></a>
+                                        <a class="mx-1 p-1" href="#"><i class="fab fa-facebook-f"></i></a>
+                                        <a class="mx-1 p-1" href="#"><i class="fab fa-linkedin-in"></i></a>
+                                        <a class="mx-1 p-1" href="#"><i class="fab fa-instagram"></i></a>
+                                        <a class="mx-1 p-1" href="#"><i class="fab fa-youtube"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Add more team items similarly -->
+                        </div>
+                        <!-- Student 1 -->
+                        <div class="carousel-item">
+                            <div class="team-item">
+                                <img class="img-fluid w-100" src="assets/imgs/team/Brend tawina.jpg" alt="">
+                                <div class="bg-light text-center p-4">
+                                    <h5 class="mb-3">Brenda Tawina</h5>
+                                    <p class="mb-2"></p>
+                                    <div class="d-flex justify-content-center">
+                                        <a class="mx-1 p-1" href="#"><i class="fab fa-twitter"></i></a>
+                                        <a class="mx-1 p-1" href="#"><i class="fab fa-facebook-f"></i></a>
+                                        <a class="mx-1 p-1" href="#"><i class="fab fa-linkedin-in"></i></a>
+                                        <a class="mx-1 p-1" href="#"><i class="fab fa-instagram"></i></a>
+                                        <a class="mx-1 p-1" href="#"><i class="fab fa-youtube"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Add more team items similarly -->
                         </div>
                     </div>
-                    <!-- Add more team items similarly -->
                 </div>
             </div>
         </div>
