--- a/index.html
+++ b/index.html
@@ -1003,7 +1003,7 @@
             </div>
         </div>
         
-        <div id="modal">
+        <div id="formModal" class="formModal">
             <div class="modal-content">
                 <span id="closeFormBtn">&times;</span>
                 <h1>Apply to Partner Universities</h1>
