--- a/index.html
+++ b/index.html
@@ -110,7 +110,29 @@
                     <a href="#about" class="btn btn-outline-primary btn-lg">Learn More</a>
                 </div>
                 <div class="col-lg-6" data-aos="fade-left">
-                    <img src="assets/imgs/hero-image.jpg" alt="Students studying abroad" class="img-fluid rounded shadow">
+                    <img src="assets/imgs/Background/IMG-20250321-WA0288.jpg" alt="Students studying abroad" class="img-fluid rounded shadow">
+                </div>
+            </div>
+            <div class="row align-items-center">
+                <div class="col-lg-6" data-aos="fade-right">
+                    <h1 class="display-4 fw-bold mb-3">Your Gateway to Global Education</h1>
+                    <p class="lead mb-4">Mtendere Education Consult opens doors to international opportunities. We guide Malawian students towards world-class education and life-changing experiences abroad.</p>
+                    <a href="#" class="btn btn-primary btn-lg me-2" data-bs-toggle="modal" data-bs-target="#enrollModal">Start Your Journey</a>
+                    <a href="#about" class="btn btn-outline-primary btn-lg">Learn More</a>
+                </div>
+                <div class="col-lg-6" data-aos="fade-left">
+                    <img src="assets/imgs/Background/IMG-20250321-WA0288.jpg" alt="Students studying abroad" class="img-fluid rounded shadow">
+                </div>
+            </div>
+            <div class="row align-items-center">
+                <div class="col-lg-6" data-aos="fade-right">
+                    <h1 class="display-4 fw-bold mb-3">Your Gateway to Global Education</h1>
+                    <p class="lead mb-4">Mtendere Education Consult opens doors to international opportunities. We guide Malawian students towards world-class education and life-changing experiences abroad.</p>
+                    <a href="#" class="btn btn-primary btn-lg me-2" data-bs-toggle="modal" data-bs-target="#enrollModal">Start Your Journey</a>
+                    <a href="#about" class="btn btn-outline-primary btn-lg">Learn More</a>
+                </div>
+                <div class="col-lg-6" data-aos="fade-left">
+                    <img src="assets/imgs/Background/IMG-20250321-WA0288.jpg" alt="Students studying abroad" class="img-fluid rounded shadow">
                 </div>
             </div>
         </div>
@@ -139,7 +161,7 @@
     </section>
 
     <!-- Services Section -->
-    <section id="services" class="py-5 bg-light">
+    <section id="services" class="py-5">
         <div class="container">
             <h2 class="display-5 fw-bold text-center mb-5" data-aos="fade-up">Our Services</h2>
             <div class="row g-4">
